Fix byline wrapping when long on iPhone.

--- a/public/css/reader.css
+++ b/public/css/reader.css
@@ -516,7 +516,6 @@ body#about-page {
 	height: 1.2em;
 }
 .iphone .page .byline {
-	height: 1em;
 	margin-bottom: 1em;
 }
 .iphone #controls {
